<resources>
    <string name="app_name">Foodizz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Food Rocket</string>
    <string name="nav_header_subtitle">food.rocket@camm.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_nearby">Nearby</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_profile">Profile</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_home">Home Activity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="remember_user">Remember me</string>
    <string name="sign_up">Sign up</string>
    <string name="select_photo">Select photo</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="verify_message">Verify code will be sent to your phone within one minute</string>
    <string name="enter_verify_code">Enter your verify code</string>
    <string name="verify_code">Verify Code</string>
    <string name="find_food_restaurant">Find a food or restaurant</string>
    <string name="best_food">Best Food</string>
    <string name="best_restaurant">Best Restaurant</string>
    <string name="mock_category_name">Fast Food</string>
    <string name="hot_category">Hot Category</string>
    <string name="mock_food_name">Pasta with ham</string>
    <string name="mock_rate">4.6</string>
    <string name="mock_food_price">$96.00</string>
    <string name="mock_restaurant_name">Pizza Hut</string>
    <string name="mock_num_of_rate">(240K)</string>
    <string name="mock_category_res1">Pizza</string>
    <string name="mock_category_res2">Fruits</string>
    <string name="mock_category_res3">Grilled</string>
    <string name="mock_restaurant_address">168 Hai Ba Trung, Da Kao, District 1, Ho Chi Minh City</string>
    <string name="by">by</string>
    <string name="mock_restaurant_name_low">pizza hut</string>
    <string name="details">Details</string>
    <string name="reviews">Reviews</string>
    <string name="mock_food_detail">If you are hungry for success, food content marketing could be the answer. Food puns are as irresistible as mom\'s apple pie. There\'s no denying that good food-related content has the potential draw in the crowds. If you are hungry for success, food content marketing could be the answer.</string>
    <string name="add_to_bag">Add to Bag</string>
    <string name="increase">+</string>
    <string name="decrease">-</string>
    <string name="mock_my_name">Linda Cherry</string>
    <string name="mock_review_time">April 4, 2019</string>
    <string name="mock_review">The food is amazing, everyone else already said everything about the food.</string>
    <string name="review">Review</string>
    <string name="foods">Foods</string>
    <string name="mock_my_location">Ho Chi Minh</string>
    <string name="mock_num_of_friends">250</string>
    <string name="mock_experiences">540</string>
    <string name="friends">Friends</string>
    <string name="experience">Experience</string>
    <string name="loves">Loves</string>
    <string name="yours">Yours</string>
    <string name="location_tracking">Location tracking</string>
    <string name="location">Location</string>
    <string name="shipping">Shipping</string>
    <string name="payment">Payment</string>
    <string name="log_out">Log out</string>
    <string name="foods_cart">Foods Cart</string>
    <string name="paid_orders">Paid Orders</string>
    <string name="done_orders">Done Orders</string>
    <string name="checkout">Checkout</string>
    <string name="delete_all_foods">Delete all foods</string>
    <string name="subtotal">Subtotal</string>
    <string name="total">Total</string>
    <string name="mock_subtotal">$0.00</string>
    <string name="mock_shipping_fee">$20.00</string>
    <string name="mock_total">$700.00</string>
    <string name="pay">Pay</string>

</resources>
