<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/myProfileImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/mock_profile_crush"
        app:civ_border_color="@color/colorAccent"
        app:civ_border_width="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/myProfileName"
        style="@style/App.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/mock_my_name"
        android:textColor="@color/notFocusColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myProfileImage" />

    <TextView
        android:id="@+id/myLocation"
        style="@style/App.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mock_my_location"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationIcon" />

    <ImageView
        android:id="@+id/locationIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myProfileName" />

    <TextView
        style="@style/App.TextView"
        android:id="@+id/txtNumOfFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mock_num_of_friends"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/txtExperiences"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myLocation" />

    <TextView
        style="@style/App.TextView"
        android:id="@+id/txtExperiences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mock_experiences"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtNumOfFriends"
        app:layout_constraintTop_toBottomOf="@+id/myLocation" />

    <TextView
        style="@style/App.TextView"
        android:id="@+id/txtFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friends"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/txtNumOfFriends"
        app:layout_constraintStart_toStartOf="@+id/txtNumOfFriends"
        app:layout_constraintTop_toBottomOf="@+id/txtNumOfFriends" />

    <TextView
        style="@style/App.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/experience"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/txtExperiences"
        app:layout_constraintStart_toStartOf="@+id/txtExperiences"
        app:layout_constraintTop_toBottomOf="@+id/txtExperiences" />

    <com.google.android.material.tabs.TabLayout
        style="@style/App.TabLayout"
        android:id="@+id/profileTabLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFriends">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/loves" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/yours" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/profileFragmentPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileTabLayout">

    </androidx.viewpager.widget.ViewPager>

</androidx.constraintlayout.widget.ConstraintLayout>