<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.food_detail.FoodDetailActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/foodDetailImagesPager"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        style="@style/App.CardView"
        android:layout_width="0dp"
        android:layout_height="432dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="1dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <me.relex.circleindicator.CircleIndicator
            android:id="@+id/indicatorFoodDetail"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            app:ci_drawable="@drawable/indicator_selected"
            app:ci_drawable_unselected="@drawable/indicator_default"
            app:ci_gravity="center"
            app:ci_height="6dp"
            app:ci_margin="16dp"
            app:ci_orientation="horizontal"
            app:ci_width="6dp" />

        <CheckBox
            android:id="@+id/cbDetailFood"
            style="@style/App.LikeCheckBox"
            android:layout_gravity="top|center"
            android:layout_marginTop="28dp" />

        <TextView
            style="@style/App.TextView"
            android:id="@+id/txtDetailFoodName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:text="@string/mock_food_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            style="@style/App.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="76dp"
            android:text="@string/by"
            android:textSize="12sp" />

        <TextView
            style="@style/App.TextView"
            android:id="@+id/txtRestaurantHasFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="72dp"
            android:text="@string/mock_restaurant_name_low"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            style="@style/App.TextView"
            android:id="@+id/txtDetailFoodPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="16dp"
            android:text="@string/mock_food_price"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.tabs.TabLayout
            style="@style/App.TabLayout"
            android:id="@+id/foodDetailTabLayout"
            android:layout_marginTop="100dp">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabDetailFood"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/details" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabReviewFood"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/reviews" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/foodDetailFragmentPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="132dp">

        </androidx.viewpager.widget.ViewPager>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>