<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/temporaryBackground"
    tools:context=".ui.entry.LoginActivity">

    <com.google.android.material.card.MaterialCardView
        style="@style/App.CardView.CardInfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/App.TextInputLayout.Info"
                android:layout_marginTop="16dp"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/news_cycle"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/App.TextInputLayout.Info"
                android:layout_marginTop="8dp"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPasswordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/news_cycle"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/cbRememberUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/info_edit_text_horizontal_margin"
                android:text="@string/remember_user"
                android:fontFamily="@font/news_cycle"
                android:buttonTint="@color/colorAccent"
                android:textColor="@color/colorAccent" />

            <com.google.android.material.button.MaterialButton
                style="@style/App.ContainedButton"
                android:id="@+id/btnSignIn"
                android:layout_width="@dimen/info_button_width"
                android:layout_height="@dimen/info_button_height"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/sign_in"
                android:onClick="performSignIn"/>

            <com.google.android.material.button.MaterialButton
                style="@style/App.TextButton"
                android:id="@+id/btnSignUpLogin"
                android:layout_width="@dimen/info_button_width"
                android:layout_height="@dimen/info_button_height"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/sign_up"
                android:onClick="performSignUp"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>